Adaugare de roluri pe partea de profile