@@ -1,29 +1,34 @@
 package com.agora.agoracampus.profile.organization.service;
 
+import com.agora.agoracampus.exception.BadRequestException;
+import com.agora.agoracampus.exception.NotFoundException;
+import com.agora.agoracampus.profile.core.model.Profile;
+import com.agora.agoracampus.profile.core.model.ProfileActorRole;
+import com.agora.agoracampus.profile.core.repository.ProfileRepository;
 import com.agora.agoracampus.profile.core.service.ProfileService;
-import com.agora.agoracampus.profile.individual.dto.response.IndividualProfileResponse;
-import com.agora.agoracampus.profile.individual.model.IndividualProfile;
 import com.agora.agoracampus.profile.organization.dto.request.CreateOrganizationProfileRequest;
 import com.agora.agoracampus.profile.organization.dto.request.OrganizationProfileUpdateRequest;
 import com.agora.agoracampus.profile.organization.dto.response.OrganizationProfileResponse;
-import com.agora.agoracampus.exception.BadRequestException;
-import com.agora.agoracampus.exception.NotFoundException;
 import com.agora.agoracampus.profile.organization.mapper.OrganizationProfileMapper;
 import com.agora.agoracampus.profile.organization.model.OrganizationProfile;
-import com.agora.agoracampus.profile.core.model.Profile;
 import com.agora.agoracampus.profile.organization.repository.OrganizationProfileRepository;
-import com.agora.agoracampus.profile.core.repository.ProfileRepository;
 import com.agora.agoracampus.user.core.model.AppUser;
 import com.agora.agoracampus.user.core.repository.AppUserRepository;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.authentication.AnonymousAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Locale;
 
 @Service
 @RequiredArgsConstructor
 public class OrganizationProfileService {
+
     private final OrganizationProfileRepository organizationProfileRepository;
     private final ProfileRepository profileRepository;
     private final OrganizationProfileMapper organizationProfileMapper;
@@ -31,77 +36,59 @@ public class OrganizationProfileService {
     private final ProfileService profileService;
 
 
-    public OrganizationProfileResponse getByProfileId(Long profileId) {
+
+    public OrganizationProfileResponse getByProfileId(Long profileId, Long actingUserId) {
+        resolveActorRole(actingUserId);
         OrganizationProfile org = organizationProfileRepository
                 .findByProfile_Id(profileId)
                 .orElseThrow(() -> new NotFoundException("Organization profile not found with profile id: " + profileId));
         return organizationProfileMapper.toResponse(org);
     }
 
-
     public List<OrganizationProfileResponse> searchByName(String name) {
-
-
-        List<OrganizationProfile> existing =
-                organizationProfileRepository.findByOrganizationNameContainingIgnoreCase(name);
-
-        if (existing.isEmpty()) {
-            throw new NotFoundException("Organization profile not found");
-        }
-
-        return organizationProfileRepository
-                .findByOrganizationNameContainingIgnoreCase(name)
-                .stream()
+        List<OrganizationProfile> existing = organizationProfileRepository
+                .findByOrganizationNameContainingIgnoreCase(name);
+        if (existing.isEmpty()) throw new NotFoundException("Organization profile not found");
+        return existing.stream()
                 .map(organizationProfileMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<OrganizationProfileResponse> searchByLocation(String location) {
-
-        List<OrganizationProfile> existing =
-                organizationProfileRepository.findByOrganizationLocationContainingIgnoreCase(location);
-
-        if (existing.isEmpty()) {
-            throw new NotFoundException("Organization profile not found");
-        }
-        return organizationProfileRepository
-                .findByOrganizationLocationContainingIgnoreCase(location)
-                .stream()
+        List<OrganizationProfile> existing = organizationProfileRepository
+                .findByLocationContainingIgnoreCase(location);
+        if (existing.isEmpty()) throw new NotFoundException("Organization profile not found");
+        return existing.stream()
                 .map(organizationProfileMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
     public List<OrganizationProfileResponse> searchByIndustry(String industry) {
-        List<OrganizationProfile> existing =
-                organizationProfileRepository.findByOrganizationIndustryContainingIgnoreCase(industry);
-
-        if (existing.isEmpty()) {
-            throw new NotFoundException("Organization profile not found");
-        }
-
-        return organizationProfileRepository
-                .findByOrganizationIndustryContainingIgnoreCase(industry)
-                .stream()
+        List<OrganizationProfile> existing = organizationProfileRepository
+                .findByIndustryContainingIgnoreCase(industry);
+        if (existing.isEmpty()) throw new NotFoundException("Organization profile not found");
+        return existing.stream()
                 .map(organizationProfileMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
     public List<OrganizationProfileResponse> searchBySpecialties(String specialties) {
-
-        List<OrganizationProfile> existing =
-                organizationProfileRepository.findByOrganizationSpecialtiesContainingIgnoreCase(specialties);
-
-        if (existing.isEmpty()) {
-            throw new NotFoundException("Organization profile not found");
-        }
-        return organizationProfileRepository
-                .findByOrganizationLocationContainingIgnoreCase(specialties)
-                .stream()
+        List<OrganizationProfile> existing = organizationProfileRepository
+                .findBySpecialtiesContainingIgnoreCase(specialties);
+        if (existing.isEmpty()) throw new NotFoundException("Organization profile not found");
+        return existing.stream()
                 .map(organizationProfileMapper::toResponse)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
+    @Transactional
+    public OrganizationProfileResponse create(Long actingUserId, CreateOrganizationProfileRequest dto) {
+        resolveActorRole(actingUserId);
 
-    public OrganizationProfileResponse create(CreateOrganizationProfileRequest dto) {
+        if (!actingUserId.equals(dto.appUserId())) {
+            throw new BadRequestException("Acting user must be the same as the user creating the profile.");
+        }
+
         AppUser appUser = appUserRepository.findById(dto.appUserId())
                 .orElseThrow(() -> new NotFoundException("User not found"));
 
@@ -111,8 +98,9 @@ public class OrganizationProfileService {
         profile.setDescription(dto.description());
         profile.setLocation(dto.location());
         profile.setWebsite(dto.website());
+        profile.setProfilePicture(dto.profilePicture());
+        profile.setCoverImage(dto.coverImage());
         Profile savedProfile = profileRepository.save(profile);
-
 
         OrganizationProfile org = new OrganizationProfile();
         org.setProfile(savedProfile);
@@ -120,34 +108,115 @@ public class OrganizationProfileService {
         org.setPhone(dto.phone());
         org.setIndustry(dto.industry());
         org.setSpecialties(dto.specialties());
-        organizationProfileRepository.save(org);
 
-        return organizationProfileMapper.toResponse(org);
+        return organizationProfileMapper.toResponse(
+                organizationProfileRepository.save(org));
     }
 
-
-
-    public OrganizationProfileResponse update(Long profileId, OrganizationProfileUpdateRequest dto) {
-
+    @Transactional
+    public OrganizationProfileResponse update(Long profileId, Long actingUserId, OrganizationProfileUpdateRequest dto) {
+        ProfileActorRole actorRole = resolveActorRole(actingUserId);
         OrganizationProfile existing = organizationProfileRepository
                 .findByProfile_Id(profileId)
-                .orElseThrow(() -> new NotFoundException("Organization profile not found with profile id: " + profileId));
+                .orElseThrow(() -> new NotFoundException("Organization profile not found"));
 
+        requireAdminOrOwner(
+                actorRole,
+                actingUserId,
+                existing.getProfile().getAppUser().getId(),
+                "Only admins or the profile owner can update this profile."
+        );
 
-        Profile profile = existing.getProfile();
-        organizationProfileMapper.updateEntity(existing, dto,profile);
-        return organizationProfileMapper.toResponse(organizationProfileRepository.save(existing));
+        organizationProfileMapper.updateEntity(existing, dto);
+        return organizationProfileMapper.toResponse(
+                organizationProfileRepository.save(existing));
     }
 
-
-
-    public void delete(Long profileId) {
+    @Transactional
+    public void delete(Long profileId, Long actingUserId) {
+        ProfileActorRole actorRole = resolveActorRole(actingUserId);
         OrganizationProfile existing = organizationProfileRepository
                 .findByProfile_Id(profileId)
-                .orElseThrow(() -> new NotFoundException("Organization profile not found with profile id: " + profileId));
+                .orElseThrow(() -> new NotFoundException("Organization profile not found"));
 
-        Profile profile =existing.getProfile();
-        profileService.deleteProfile(profile.getId());
+        requireAdminOrOwner(
+                actorRole,
+                actingUserId,
+                existing.getProfile().getAppUser().getId(),
+                "Only admins or the profile owner can delete this profile."
+        );
 
+        profileService.deleteProfile(existing.getProfile().getId(),actingUserId);
+    }
+
+    private AppUser validateUserExists(Long userId) {
+        return appUserRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User " + userId + " was not found."));
+    }
+
+    private ProfileActorRole resolveActorRole(Long actingUserId) {
+        validateUserExists(actingUserId);
+
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        boolean authenticated = isAuthenticated(authentication);
+        boolean isAdmin = authenticated && hasAdminAuthority(authentication);
+
+        if (authenticated) {
+            validateAuthenticatedIdentity(actingUserId, isAdmin, authentication);
+        }
+
+        if (isAdmin) return ProfileActorRole.ADMIN;
+        return ProfileActorRole.ORGANIZATION;
+    }
+
+    private void requireAdminOrOwner(
+            ProfileActorRole actorRole,
+            Long actingUserId,
+            Long ownerId,
+            String message
+    ) {
+        if (actorRole != ProfileActorRole.ADMIN && !actingUserId.equals(ownerId)) {
+            throw new BadRequestException(message);
+        }
+    }
+
+    private boolean isAuthenticated(Authentication authentication) {
+        return authentication != null
+                && authentication.isAuthenticated()
+                && !(authentication instanceof AnonymousAuthenticationToken);
+    }
+
+    private boolean hasAdminAuthority(Authentication authentication) {
+        for (GrantedAuthority authority : authentication.getAuthorities()) {
+            String normalizedAuthority = authority.getAuthority().toUpperCase(Locale.ROOT);
+            if ("ROLE_ADMIN".equals(normalizedAuthority) || "ADMIN".equals(normalizedAuthority)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private void validateAuthenticatedIdentity(
+            Long actingUserId,
+            boolean isAdmin,
+            Authentication authentication
+    ) {
+        if (isAdmin) return;
+
+        String principalName = authentication.getName();
+        if (principalName == null
+                || principalName.isBlank()
+                || "anonymousUser".equals(principalName)) {
+            return;
+        }
+
+        AppUser authenticatedUser = appUserRepository.findByKeycloakId(principalName)
+                .orElseThrow(() -> new BadRequestException(
+                        "Authenticated principal is not registered as an application user."
+                ));
+
+        if (!authenticatedUser.getId().equals(actingUserId)) {
+            throw new BadRequestException("actingUserId must match the authenticated user.");
+        }
     }
 }
